# devpane

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  plan.md  skills-lock.json
.cargo/: config.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/devpane/: Cargo.toml
crates/devpane/src/config/: mod.rs  model.rs  paths.rs  validation.rs
crates/devpane/src/process/: launch.rs  manager.rs  runner.rs
crates/devpane/src/workspace/: builder.rs  model.rs  runtime.rs
examples/: devpane.dpane  webclient.dpane
scripts/: release.ps1
src/: cli.rs  lib.rs  main.rs  output.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/config/: mod.rs  model.rs  paths.rs  settings.rs  validation.rs
src/process/: launch.rs  manager.rs  mod.rs  runner.rs
src/workspace/: builder.rs  mod.rs  runtime.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.vue  layout.ts  main.ts  style.css  terminalSessions.ts  types.ts
ui/src/api/: terminals.ts  window.ts  workspaces.ts
ui/src/components/: DeleteWorkspaceDialog.vue  SaveDialog.vue  SessionPicker.vue  TerminalPane.vue  TerminalWorkspace.vue  Titlebar.vue  WorkspaceNodeView.vue
